--- a/writeup/refs.bib
+++ b/writeup/refs.bib
@@ -594,3 +594,107 @@ archivePrefix = "arXiv",
    adsurl = {http://adsabs.harvard.edu/abs/1976ApJ...203..297S},
   adsnote = {Provided by the SAO/NASA Astrophysics Data System}
 }
+
+@ARTICLE{2014ApJ...797...71Z,
+   author = {{Zheng}, Z. and {Ofek}, E.~O. and {Kulkarni}, S.~R. and {Neill}, J.~D. and 
+	{Juric}, M.},
+    title = "{Probing the Intergalactic Medium with Fast Radio Bursts}",
+  journal = {\apj},
+archivePrefix = "arXiv",
+   eprint = {1409.3244},
+ primaryClass = "astro-ph.HE",
+ keywords = {cosmology: miscellaneous, intergalactic medium, pulsars: general, radio continuum: general},
+     year = 2014,
+    month = dec,
+   volume = 797,
+      eid = {71},
+    pages = {71},
+      doi = {10.1088/0004-637X/797/1/71},
+   adsurl = {http://adsabs.harvard.edu/abs/2014ApJ...797...71Z},
+  adsnote = {Provided by the SAO/NASA Astrophysics Data System}
+}
+
+@ARTICLE{2014MNRAS.443L..11D,
+   author = {{Dennison}, B.},
+    title = "{Fast radio bursts: constraints on the dispersing medium}",
+  journal = {\mnras},
+archivePrefix = "arXiv",
+   eprint = {1403.2263},
+ primaryClass = "astro-ph.HE",
+ keywords = {stars: flare, large-scale structure of Universe, radio continuum: general},
+     year = 2014,
+    month = sep,
+   volume = 443,
+    pages = {L11-L14},
+      doi = {10.1093/mnrasl/slu072},
+   adsurl = {http://adsabs.harvard.edu/abs/2014MNRAS.443L..11D},
+  adsnote = {Provided by the SAO/NASA Astrophysics Data System}
+}
+
+@ARTICLE{2014ApJ...788..189G,
+   author = {{Gao}, H. and {Li}, Z. and {Zhang}, B.},
+    title = "{Fast Radio Burst/Gamma-Ray Burst Cosmography}",
+  journal = {\apj},
+archivePrefix = "arXiv",
+   eprint = {1402.2498},
+ keywords = {dark energy, gamma-ray burst: general},
+     year = 2014,
+    month = jun,
+   volume = 788,
+      eid = {189},
+    pages = {189},
+      doi = {10.1088/0004-637X/788/2/189},
+   adsurl = {http://adsabs.harvard.edu/abs/2014ApJ...788..189G},
+  adsnote = {Provided by the SAO/NASA Astrophysics Data System}
+}
+
+@ARTICLE{2014ApJ...783L..35D,
+   author = {{Deng}, W. and {Zhang}, B.},
+    title = "{Cosmological Implications of Fast Radio Burst/Gamma-Ray Burst Associations}",
+  journal = {\apjl},
+archivePrefix = "arXiv",
+   eprint = {1401.0059},
+ primaryClass = "astro-ph.HE",
+ keywords = {dark ages, reionization, first stars, gamma-ray burst: general},
+     year = 2014,
+    month = mar,
+   volume = 783,
+      eid = {L35},
+    pages = {L35},
+      doi = {10.1088/2041-8205/783/2/L35},
+   adsurl = {http://adsabs.harvard.edu/abs/2014ApJ...783L..35D},
+  adsnote = {Provided by the SAO/NASA Astrophysics Data System}
+}
+
+@ARTICLE{2014PhRvD..89j7303Z,
+   author = {{Zhou}, B. and {Li}, X. and {Wang}, T. and {Fan}, Y.-Z. and 
+	{Wei}, D.-M.},
+    title = "{Fast radio bursts as a cosmic probe?}",
+  journal = {\prd},
+archivePrefix = "arXiv",
+   eprint = {1401.2927},
+ keywords = {Radio sources, Unidentified sources of radiation outside the Solar System, Cosmology},
+     year = 2014,
+    month = may,
+   volume = 89,
+   number = 10,
+      eid = {107303},
+    pages = {107303},
+      doi = {10.1103/PhysRevD.89.107303},
+   adsurl = {http://adsabs.harvard.edu/abs/2014PhRvD..89j7303Z},
+  adsnote = {Provided by the SAO/NASA Astrophysics Data System}
+}
+
+@ARTICLE{2015arXiv150505535C,
+   author = {{Connor}, L. and {Sievers}, J. and {Pen}, U.-L.},
+    title = "{Non-Cosmological FRB's from Young Supernova Remnant Pulsars}",
+  journal = {ArXiv e-prints},
+archivePrefix = "arXiv",
+   eprint = {1505.05535},
+ primaryClass = "astro-ph.HE",
+ keywords = {Astrophysics - High Energy Astrophysical Phenomena},
+     year = 2015,
+    month = may,
+   adsurl = {http://adsabs.harvard.edu/abs/2015arXiv150505535C},
+  adsnote = {Provided by the SAO/NASA Astrophysics Data System}
+}
