--- a/writeup/dm_space_distortions.tex
+++ b/writeup/dm_space_distortions.tex
@@ -66,22 +66,26 @@ Columbia, Vancouver, BC, Canada, V6T 1Z1}
 
 \begin{abstract}
 
-    The recently discovered fast radio bursts are a new class of radio
+    The recently discovered fast radio bursts (FBRs) are a new class of radio
     transient that, due to their high dispersion from intervening plasma,
     have been interpreted as
     originating from cosmological distances.  The rate of fast radio bursts
     has been estimated to be several thousand over the whole sky per day.  If
     cosmological, the sources of these events should trace the large-scale
     structure of the
-    Universe. Furthermore, because the dispersion measure (DM) can be
-    used as a proxy for radial distance (like redshift),
-    clustering can be studied in three dimensions. Due to inhomogeneities in
-    the plasma's density, dispersion measure is an imperfect proxy for radial
-    distance and we show that this leads to additional clustering terms---the
-    dispersion-measure-space distortions. We calculate the DM-space
-    power spectra for a toy model of electron and FRB clustering and show that
+    Universe.
+    We show here that, even without redshifts, these bursts can be used to
+    study the three-dimensional cluster of matter in the Universe.
+    This is because the dispersion of radio waves as they travel through the
+    Universe, like redshift, can be
+    used as a proxy for radial distance. 
+    Due to inhomogeneities in
+    the plasma's density, dispersion is an imperfect proxy for radial
+    distance and we show that this leads to calculable dispersion-space
+    distortions in the apparent clustering. We calculate the dispersion-space
+    power spectra for a simple model of electron and FRB clustering and show that
     the clustering signal could be detected in a survey of $10^4$ FRB
-    events, as is expected to be produced by the Canadian Hydrogen Intensity
+    events. This rate is \ldots as is expected to be produced by the Canadian Hydrogen Intensity
     Mapping Experiment.
 
 \end{abstract}
@@ -131,7 +135,8 @@ then the average DM--distance relation can be modelled
 and the sources are at
 cosmological distances of a few gigaparsecs. This would permit
 the study of the clustering of FRB sources in three dimensions which should trace the
-large-scale structure of the Universe on linear scales.
+large-scale structure of the Universe on linear scales. Note that although we
+frame our discussions in terms of FRBs, dispersion may be 
 
 
 Neither redshift nor dispersion measure are perfect proxies for radial distance.
@@ -177,7 +182,7 @@ $\vec x_s$ inferred from the dispersion measure assuming that the electrons are
 homogeneous. This only affects the radial coordinate such that $\vec x_s = \hat
 n \chi_s$ with $\chi_s$ defined by the equation
 \begin{equation}
-    {\rm DM}(\chi_s) = \int_0^\chi \ud\chi' a(\chi')^2 \bar{n}_e(\chi').
+    {\rm DM}(\chi_s) = \int_0^{\chi_s} \ud\chi' a(\chi')^2 \bar{n}_e(\chi').
 \end{equation}
 
 Combining the above equations (keeping only terms first order in the density
@@ -563,7 +568,7 @@ cross-power spectrum is then
 \end{align}
 where the second term in brackets only contributes for $i = j$.
 
-Here we consider the sensitivity of a survey with a total of $10^4$ dispersion
+We consider the sensitivity of a survey with a total of $10^4$ dispersion
 measures from FRB events distributed uniformly over half the sky. This is in rough
 approximation to what could be achieved by the Canadian Hydrogen Intensity
 Mapping Experiment's now funded FRB instrument over a three year survey.
@@ -625,7 +630,7 @@ contribution from the IGM.
 
 \begin{acknowledgments}
 
-We would like to thank Ue-Li Pen and Mathew McQuinn for helpful discussions.
+We thank Ue-Li Pen and Mathew McQuinn for helpful discussions.
 %
 KWM is supported by the Canadian Institute for Advanced Research, Global Scalars
 Program.
