--- a/writeup/dm_space_distortions_vKris1_Jun3.tex
+++ b/writeup/dm_space_distortions_vKris1_Jun3.tex
@@ -51,7 +51,8 @@
 
 \begin{document}
 
-\title{The large-scale structure of the Universe in dispersion measure space}
+%\title{The large-scale structure of the Universe in dispersion measure space}
+\title{Dispersion Distance and the Matter Distribution of the Universe in Dispersion Space}
 
 \author{Kiyoshi Wesley Masui}
  \affiliation{Department of Physics and Astronomy, University of British 
@@ -66,28 +67,20 @@ Columbia, Vancouver, BC, Canada, V6T 1Z1}
 
 \begin{abstract}
 
-    The recently discovered fast radio bursts (FBRs) are a new class of radio
-    transient that, due to their high dispersion from intervening plasma,
-    have been interpreted as
-    originating from cosmological distances.  The rate of fast radio bursts
-    has been estimated to be several thousand over the whole sky per day.  If
-    cosmological, the sources of these events should trace the large-scale
-    structure of the
-    Universe.
-    We show here that, even without redshifts, these bursts can be used to
-    study the three-dimensional cluster of matter in the Universe.
-    This is because the dispersion of radio waves as they travel through the
-    Universe, like redshift, can be
-    used as a proxy for radial distance. 
-    Due to inhomogeneities in
-    the plasma's density, dispersion is an imperfect proxy for radial
+    We propose that `standard pings', brief broadband radio impulses, can be used to
+    study the three-dimensional clustering of matter in the Universe even in the absence of redshift information.
+    The dispersion of radio waves as they travel through the
+    Universe, like redshift, can be used as a cosmological distance measure.
+    Due to inhomogeneities in the electron density along the line-of-siight dispersion is an imperfect proxy for radial
     distance and we show that this leads to calculable dispersion-space
-    distortions in the apparent clustering. We calculate the dispersion-space
-    power spectra for a simple model of electron and FRB clustering and show that
-    the clustering signal could be detected in a survey of $10^4$ FRB
-    events. This rate is \ldots as is expected to be produced by the Canadian Hydrogen Intensity
-    Mapping Experiment.
-
+    distortions in the apparent clustering of sources. Fast radio bursts (FRBs) are a new class of radio
+    transients that are the prototypical standard ping, and due to their high observed dispersion from intervening plasma,
+    have been interpreted as originating at cosmological distances.  The rate of fast radio bursts
+    has been estimated to be several thousand over the whole sky per day, and if cosmological, the sources of these events should trace the large-scale
+    structure of the Universe.  We calculate the dispersion-space
+    power spectra for a simple model where electrons and FRBs are biased tracers of the large-scale-structure of the Universe and show that
+    the clustering signal may be detectable in a survey with as few as $10000$ 
+    events.  Upcoming wide-field radio telescopes, like the Canadian Hydrogen Intensity Mapping Experiment (CHIME), are expected to detect...
 \end{abstract}
 
 \maketitle
@@ -105,8 +98,15 @@ surveys have now aggregated the positions of millions of galaxies into three
 dimensional density maps, exposing a rich structure of clusters, filaments,
 walls and voids.
 
-However, redshift is not the only measure of radial distance. In particular,
-dispersion of electromagnetic signals due to intervening plasma
+However, redshift is not the only measure of radial distance.   
+Standard candles and standard rulers can be used to estimate distance using brightness and angular size respectively.
+In the same way a \emph{standard ping}, a brief broadband radio impulse, can be used to estimate radial distance because of
+the characteristic $\lambda^2$ dispersion of electromagnetic signals along the line-of-sight as a function of wavelength.
+This technique, widely used as an approximate distance indicator to pulsars in the Galaxy, can be used to define the
+\emph{dispersion distance} to cosmological sources.
+
+
+due to intervening plasma
 is readily measured from fast radio bursts (FRB) which are a class
 of radio transient first reported by \citet{2007Sci...318..777L}.
 There have since been 
